fix-total-summary-alignment

--- a/backend/web/css/style.css
+++ b/backend/web/css/style.css
@@ -150,16 +150,14 @@ dl {
 
 @media (min-width: 768px) {
   .dl-invoice-summary dt {
-    float: left;
-    width: 230px;
-    overflow: hidden;
-    clear: left;
-    text-align: right;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    text-align: left;
+        float:left;
+        line-height:1.5;
+        font-weight:normal;
   }
   .dl-invoice-summary dd, .royalty dd{
 	text-align: right;
+        line-height:1.5;
   }
   
 }
